@ What does this version number mean?
1. State: 'd' means indev, 'a' means alpha, 'b' means beta, 'r' means release
2. Major: major changes to a mod
3. Minor: important changes to a mod
4. Build: Whenever I end working on a mod (e.g. every day). Also independent from the other ones

a1.0-1 (2014/08/05 ...)
- Initial alpha release